@@ -8,6 +8,7 @@
 	 <subtitle>Publishing books, articles, papers and multi-volume sets with DocBook XML</subtitle>
 	 <productname>Publican</productname>
 	 <productnumber>3.2</productnumber>
+	 <edition>5</edition>
 	 <abstract>
 		<para>
 			This book will help you install <application>Publican</application>. It also provides instructions for using Publican to create and publish DocBook XML-based books, articles and book sets. This guide assumes that you are already familiar with DocBook XML.
