@@ -41,6 +41,7 @@
   - Support CDATA tags. BZ #958343
   - Fix UTF8 image names getting mangled in publish. BZ #953618
   - Add wkhtmltopdf_opts parameter to pass options to wkhtmltopdf. BZ #951290
+  - Fix edition missing on PDF cover pages. BZ #956940
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
